# Arschibald

./: .coverage  .env  .env.example  .gitattributes  .markdownlint.json  .tmp_placeholder_test.py  23.0.0  ADMIN_CAROUSEL_ZUSAMMENFASSUNG.md  AGENT_SETUP_COMPLETE.md  AKTIVIERUNG_ZUSAMMENFASSUNG.md  ALTES_SYSTEM_WIEDERHERGESTELLT.md  CHART_INTEGRATION_COMPLETE.md  COMPLETE_ANALYSIS_FINAL_REPORT.md  CORE_INTEGRATION_COMPLETE_SUMMARY.md  CRITICAL_FIXES_COMPLETE.md  DATABASE_INTEGRATION_SUCCESS.md  DEBUG_OFFER_DATA.py  EXTENDED_PDF_FALLBACK_FIX.md  EXTENDED_PDF_FINAL_FIX.md  FEATURE_ACTIVATION_COMPLETE.md  FILTER_COMPLETE_REMOVAL_FIX.md  FINAL_FIX_VERIFICATION.py  FIX_AMORTISATION_UND_ERSPARTE_MWST.md  INSTALLATION_INFO.txt  LICENSE.txt  MASTER_FIX.py  MULTI_PDF_INTEGRATION_STATUS.md  MULTI_PDF_PRICE_TEST_SUCCESS.md  PDF_FIXES_FINAL_STATUS.md  PDF_FIXES_TEST.py  PDF_UI_CHART_SELECTION_FIX.md  PHASE_3_4_C_IMPLEMENTATION_SUMMARY.md  PHASE_3_SESSION_PERSISTENCE_SUMMARY.md  PROBLEM_DOPPELTE_BERECHNUNGEN.md  README.md  ROADMAP.md  SETTINGS_OPTIONS_ROADMAP.md  SETUP_GUIDE.md  SOLARFABRIK_MWST_FIX_SUMMARY.md  SOLARFABRIK_REAL_PROBLEM_ANALYSIS.md  (+208 more)
archive/sokuk_legacy/: .env.example  0.9.0  2.0.0  DATABASE_OPTIMIZATION_SUMMARY.md  INDEX.md  PDF_PRICING_INTEGRATION_SUMMARY.md  PROGRESS_MANAGER_GUIDE.md  README.md  SERVICES_IMPLEMENTATION_SUMMARY.md  TASK_8_IMPLEMENTATION_SUMMARY.md  admin_logo_management_ui.py  admin_module_alias_mapping_ui.py  admin_panel.py  admin_payment_terms_ui.py  admin_pricing_rule_ui.py  admin_product_attributes_ui.py  admin_product_database_ui.py  admin_profit_margin_ui.py  analysis.py  brand_logo_db.py  calculation_bridge.py  calculations.py  calculations_heatpump.py  check_all_matrices.py  check_companies.py  check_db.py  compare_manufacturers.py  create_png_test_images.py  crm.py  crm_dashboard_ui.py  crm_pipeline_ui.py  data_input.py  database.py  database_bridge.py  debug_logo_pdf.py  debug_pdf_charts_complete.py  debug_seite6_problem.py  debug_wasserfall_data.py  demo_calculate_per_integration.py  demo_economic_analysis_integration.py  (+48 more)
archive/sokuk_legacy/components/: progress_manager.py
archive/sokuk_legacy/coords/: seite1.yml  seite2.yml  seite3.yml  seite4.yml  seite5.yml  seite6.yml  seite7.yml
archive/sokuk_legacy/core/: config.py  database.py
archive/sokuk_legacy/data/: price_matrix.xlsx
archive/sokuk_legacy/docs/: XLSX_Upload_Anleitung.md  kakerlake_archive_summary.md
archive/sokuk_legacy/pdf_template_engine/: dynamic_overlay.py  merger.py  placeholders.py  prepare_backgrounds.py
archive/sokuk_legacy/pricing/: advanced_pricing_formula.py  cache_performance.py  calculate_per_engine.py  combined_pricing_engine.py  demo_pricing_cache.py  (+10 more)
(+1212 files in other folders)
